# DeepEyeSniperAuto

./: .gitignore  App.tsx  CONTRIBUTING.md  DeepEye_V5_Ultra_Gold.html  LICENSE  README.md  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  strategy_suggestion.yml
.github/workflows/: release.yml
components/: Dashboard.tsx  Intelligence.tsx  Network.tsx  PriceChart.tsx  Sidebar.tsx  SystemLogs.tsx  Terminal.tsx
public/: version.json
scripts/: bump_version.js  ship_it.js
services/: dexService.ts  geminiService.ts  hyperliquidService.ts  sniperService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: .keep  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
